[tool.poetry]
name = "single-image-contrast-enhancer"
version = "0.1.0"
description = ""
authors = ["popura <popura.net@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
hydra-core = "^0.11.3"
matplotlib = "^3.2.1"
requests = "^2.23.0"
rarfile = "^3.1"
scipy = "^1.4.1"
cupy-cuda102 = "^7.5.0"
pandas = "^1.0.5"
torch = "^1.6.0"
torchvision = "^0.7.0"
torchaudio = "^0.6.0"
optuna = "^2.1.0"
deepy = {path = "external/deepy-0.2.0-py3-none-any.whl"}

[tool.poetry.dev-dependencies]
ipython = "^7.15.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
