[tool.poetry]
name = "no-checker-enhancement"
version = "0.1.0"
description = ""
authors = ["Yuma Kinoshita <ykinoshita@tmu.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.9.0"
torchvision = "^0.10.0"
torchaudio = "^0.9.0"
deepy = {path = "external/deepy-0.5.0-py3-none-any.whl"}
hydra-core = "^1.1.0"
kornia = "^0.5.7"
torchinfo = "^1.5.2"
pandas = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
